# glow

CMSIS-GLOW-DOC/: compiled_bytecode.asm  compiled_jitSpecializeAllArguments_bytecode.asm  journal.md  model_69.ll  model_jitSpecializeAllArguments.ll  standard_jitSpecializeAllArguments_output.asm  standard_output.asm
include/glow/Quantization/Base/: Base.h
lib/Backends/CMSIS/: CMSISBackend.cpp  CMSISBackend.h  CMSISLLVMIRGen.cpp  CMSISLLVMIRGen.h  CMakeLists.txt  libjit_cmsis.c  libjit_cmsis.cpp
lib/Backends/CPU/: CMakeLists.txt
lib/Quantization/Base/: Base.cpp
